[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_csv"
version = "2023.1.0"
description = "CSV Parser and Collection for Render Engine"
readme = "README.md"

dependencies = [
    "render-engine >= 2023.10.3a3",
]
[project.optional-dependencies] 
dev = [
    "pytest >= 6.2.5",
]    

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/mannyanebi/render-engine-csv/"
repository = "https://github.com/mannyanebi/render-engine-csv/"

[tool.pytest.ini_options]
pythonpath = ["src"]
